# llm-chat

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: android-release.yml  build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-windows.yml  ci.yml  iosbuild.yml  macbuild.yml  release.yml  test.yml  windowsbuild.yml
coverage/: clover.xml  coverage-final.json  index.html
coverage/llm-chat/: eslint.config.js.html  index.html  tailwind.config.js.html  vite.config.ts.html  vitest.config.ts.html
docs/: PRIVACY_POLICY.md  STYLE_GUIDE.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  debug.keystore  llm_chat.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  tests.rs
src/components/: AppHeader.tsx  AuthBuilder.tsx  Button.tsx  HelpTooltip.css  HelpTooltip.tsx  ProfileCard.tsx  ProfileForm.tsx  ThemeToggle.tsx
src/pages/: ChatPage.tsx  LandingPage.tsx  SettingsPage.tsx
src/store/: profileStore.ts
src/styles/: buttons.css  cards.css  chat.css  components.css  documents.css  forms.css
src/tests/: documentUpload.test.ts.disabled
src/types/: types.ts
src/utils/: authHelpers.ts  validation.ts
tests/: test-server.cjs
tests/integration/: chat-api.test.ts  chat-rag-features.test.tsx  landing-profile-flow.test.tsx  profileForm.test.tsx  profileStore.test.ts
tests/setup/: mock-server.cjs  mock-server.d.ts
tests/unit/: Button.test.tsx  (+6 more)
(+31 files in other folders)
