[package]
name = "llm-chat"
version = "0.1.0"
description = "A Tauri App"
authors = ["Colton Spurgin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "llm_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = "1.45.0"
tauri-plugin-store = "2"
base64 = "0.22.1"
local-ip-address = "0.6.5"
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
# RAG dependencies
pdf-extract = "0.7"
tokio-stream = "0.1"
futures = "0.3"
text-splitter = "0.14"
bytes = "1.8"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3.0"
